# pyspark-medallion-portfolio

./: .gitignore  bronze_test.py  config_test.py  pyproject.toml  spark_test.py
conf/: log4j2.properties
conf/bronze/: olist.toml
data/raw/: orders.csv
scripts/: bronze_ingest_run.py  bronze_orders_read.py  bronze_orders_run.py  gold_daily_sales_run.py  silver_orders_run.py
src/medallion_project/bronze/: ingest.py  orders.py
src/medallion_project/common/: config.py  manifest.py  spark.py
src/medallion_project/gold/: daily_sales.py
src/medallion_project/pipelines/: bronze_ingest.py  bronze_orders.py  gold_daily_sales.py  silver_orders.py
src/medallion_project/silver/: orders.py
tests/: bronze_ingest_test.py  bronze_test.py  delta_test.py  gold_test.py  import_test.py  manifest_test.py
